# nanoVLM

./: .amlignore  .gitignore  .modalignore  CUSTOM_TRAINING.md  DATASET_WORKAROUND.md  ENHANCED_FEATURES_SUMMARY.md  ENHANCED_LOGGING.md  PUBLIC_DATASETS.md  QUICK_START_PUBLIC_DATASETS.md  README.md  README_PRODUCTION.md  check_azure_setup.py  create_real_test_dataset.py  create_synthetic_dataset.py  debug_generation.py  debug_generation_full.py  debug_wandb_modal.py  enhanced-modal-features.patch  evaluation.py  generate.py  main.py  prepare_custom_dataset.py  pyproject.toml  quick_validation_test.py  test_hf_integration.py  test_local_training.py  train.py  train_custom.py  upload_to_hf.py
azure/: Dockerfile  README.md  azure_ml_setup.py  create_k80_compute.py  create_spot_compute.py  rebuild_env.py  request_quota.md  request_student_quota.sh  request_v100_quota.md  requirements-azure.txt  setup_azure_account.md  simple_test.py  submit_cpu_job.py  submit_serverless_job.py  submit_spot_training.py  submit_training_job.py  train_cpu_test.py  train_distributed.py
data/: advanced_datasets.py  collators.py  custom_dataset.py  data_utils.py  datasets.py  processors.py
datasets/: modal_example.json  modal_multi_image_example.json  modal_test.json  real_test_dataset.json  synthetic_test_dataset.json
eval/: benchmark-inference.py  benchmark_suite.py  lmms_eval_wrapper.py  measure_vram.py
examples/: full_training_pipeline.py  modal_integrated_example.py  modal_with_model_card_example.py  public_datasets.py  sample_model_card.md  simple_public_datasets.py  (+2 more)
modal/: train.py  (+17 more)
(+11 files in other folders)
